# static_vector.rs

./: .lefthook.yml  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  clippy.toml  codecov.yml  index.html  output.html  rustfmt.toml  search-index.js  struct.CapacityExceededError.html
.cargo/: config.toml
.github/doc/: doc.py  index_template.html  version_template.html
.github/workflows/: cargo-audit.yml  ci.yml  doc.yml  fuzz.yml  release.yml  workflows-audit.yml
benches/: static_vector.rs
development/: search-index.js
development/static_vector/: index.html  struct.Iter.html
development/trait.impl/core/marker/: trait.Send.js  trait.Sync.js
examples/: history.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: static_vector.rs
latest/: crates.js  src-files.js
latest/search.desc/static_vector/: static_vector-desc-0-.js
latest/src/static_vector/: lib.rs.html
latest/static_vector/: index.html  sidebar-items.js  struct.CapacityExceededError.html  struct.Iter.html  struct.IterMut.html  struct.Vec.html
latest/trait.impl/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js
master/: search-index.js  src-files.js
master/search.desc/static_vector/: static_vector-desc-0-.js
master/src/static_vector/: lib.rs.html  macros.rs.html
master/static_vector/: all.html  index.html  macro.vec.html  struct.CapacityError.html  struct.Iter.html  struct.IterMut.html  struct.Vec.html
master/trait.impl/core/marker/: trait.Freeze.js
master/trait.impl/core/ops/drop/: trait.Drop.js
master/trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js
pr/: help.html  search-index.js
pr/static_vector/: struct.Iter.html
pr/trait.impl/core/error/: trait.Error.js
pr/trait.impl/core/fmt/: trait.Debug.js
pr/trait.impl/core/marker/: trait.Unpin.js
pr/trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
src/: lib.rs  macros.rs
src/static_vector/: lib.rs.html
static_vector/: index.html  struct.Iter.html  struct.IterMut.html  struct.LengthTooLargeError.html  struct.Vec.html
tests/: compile_tests.rs
tests/cases/: capacity_zero.rs  capacity_zero.stderr  must_use.rs  must_use.stderr
trait.impl/core/fmt/: trait.Display.js
trait.impl/core/iter/traits/collect/: trait.IntoIterator.js
trait.impl/core/ops/drop/: trait.Drop.js
v0.1.0/: search-index.js  settings.html
v0.1.0/search.desc/static_vector/: static_vector-desc-0-.js
v0.1.0/trait.impl/core/default/: trait.Default.js
v0.1.0/trait.impl/core/error/: trait.Error.js
v0.1.0/trait.impl/core/fmt/: trait.Display.js
v0.1.0/trait.impl/core/marker/: trait.Unpin.js
v0.1.0/trait.impl/core/ops/drop/: trait.Drop.js
v0.1.0/trait.impl/core/panic/unwind_safe/: trait.UnwindSafe.js
v0.1.1/static_vector/: all.html
v0.2.0/: search-index.js
v0.2.0/static_vector/: all.html  struct.LengthTooLargeError.html  struct.Vec.html
v0.2.0/trait.impl/core/default/: trait.Default.js
v0.2.0/trait.impl/core/fmt/: trait.Debug.js
v0.2.0/trait.impl/core/iter/traits/collect/: trait.IntoIterator.js
v0.2.0/trait.impl/core/iter/traits/iterator/: trait.Iterator.js
v0.2.0/trait.impl/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js
v0.2.0/trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js
v0.3.0/search.desc/static_vector/: static_vector-desc-0-.js
v0.3.0/src/static_vector/: lib.rs.html
v0.3.0/static_vector/: sidebar-items.js  struct.CapacityError.html
v0.3.0/trait.impl/core/error/: trait.Error.js
v0.3.0/trait.impl/core/fmt/: trait.Debug.js  trait.Display.js
v0.4.0/: index.html
v0.4.0/static_vector/: all.html  struct.CapacityError.html  struct.Iter.html  struct.IterMut.html  struct.Vec.html
v0.4.0/trait.impl/core/clone/: trait.Clone.js
v0.4.0/trait.impl/core/default/: trait.Default.js
v0.4.0/trait.impl/core/fmt/: trait.Debug.js
v0.4.0/trait.impl/core/marker/: trait.Unpin.js
v0.5.0/: search-index.js
v0.5.0/src/static_vector/: lib.rs.html  macros.rs.html
v0.5.0/static_vector/: all.html  macro.vec.html  sidebar-items.js  struct.CapacityError.html  struct.Iter.html  struct.IterMut.html  struct.Vec.html
v0.5.0/trait.impl/core/cmp/: trait.PartialEq.js  trait.PartialOrd.js
v0.5.0/trait.impl/core/iter/traits/collect/: trait.IntoIterator.js
v0.5.0/trait.impl/core/panic/unwind_safe/: trait.UnwindSafe.js
