[package]
name = "static_vector"
version = "0.4.0"
authors = ["Andrei Avram"]
rust-version = "1.85.1"
edition = "2024"
description = "A no-std, stack-allocated vector with fixed capacity and dynamic length"
documentation = "https://andreiavrammsd.github.io/static_vector.rs"
readme = "README.md"
homepage = "https://github.com/andreiavrammsd/static_vector.rs"
repository = "https://github.com/andreiavrammsd/static_vector.rs"
license = "MIT"
keywords = ["vector"]
categories = ["data-structures", "no-std"]
publish = false

[profile.dev]
overflow-checks = true
lto = false
panic = "unwind"
opt-level = 0
incremental = true

[profile.release]
codegen-units = 1
overflow-checks = true
debug = "full"
lto = true
panic = "abort"
opt-level = "s"
split-debuginfo = "packed"
strip = "symbols"

[profile.bench]
lto = "thin"

[lints.rust]
unsafe_code = "allow"
elided_lifetimes_in_paths = "forbid"

[lints.clippy]
arbitrary_source_item_ordering = "allow"
assertions_on_result_states = "allow"
doc_include_without_cfg = "allow"
indexing_slicing = "allow"
integer_division_remainder_used = "allow"
let_underscore_must_use = "allow"
let_underscore_untyped = "allow"
min_ident_chars = "allow"
missing_docs_in_private_items = "allow"
missing_inline_in_public_items = "allow"
missing_trait_methods = "allow"
question_mark_used = "allow"
single_call_fn = "allow"
single_char_lifetime_names = "allow"
unwrap_used = "allow"
wildcard_imports = "forbid"
panic = "forbid"
iter_without_into_iter = "forbid"
expect_used = "forbid"
exhaustive_enums = "forbid"
absolute_paths = "forbid"
alloc_instead_of_core = "forbid"
allow_attributes = "forbid"
allow_attributes_without_reason = "forbid"
as_conversions = "forbid"
as_pointer_underscore = "forbid"
as_underscore = "forbid"
big_endian_bytes = "forbid"
cfg_not_test = "forbid"
clone_on_ref_ptr = "forbid"
create_dir = "forbid"
dbg_macro = "forbid"
decimal_literal_representation = "forbid"
default_union_representation = "forbid"
deref_by_slicing = "forbid"
disallowed_script_idents = "forbid"
else_if_without_else = "forbid"
empty_drop = "forbid"
empty_enum_variants_with_brackets = "forbid"
empty_structs_with_brackets = "forbid"
error_impl_error = "forbid"
exhaustive_structs = "forbid"
exit = "forbid"
field_scoped_visibility_modifiers = "forbid"
filetype_is_file = "forbid"
float_arithmetic = "forbid"
float_cmp_const = "forbid"
fn_to_numeric_cast_any = "forbid"
get_unwrap = "forbid"
host_endian_bytes = "forbid"
if_then_some_else_none = "forbid"
impl_trait_in_params = "forbid"
infinite_loop = "forbid"
inline_asm_x86_att_syntax = "forbid"
inline_asm_x86_intel_syntax = "forbid"
integer_division = "forbid"
iter_over_hash_type = "forbid"
large_include_file = "forbid"
little_endian_bytes = "forbid"
lossy_float_literal = "forbid"
map_err_ignore = "forbid"
map_with_unused_argument_over_ranges = "forbid"
mem_forget = "forbid"
missing_assert_message = "forbid"
missing_asserts_for_indexing = "forbid"
mixed_read_write_in_expression = "forbid"
mod_module_files = "forbid"
module_name_repetitions = "forbid"
modulo_arithmetic = "forbid"
multiple_inherent_impl = "forbid"
multiple_unsafe_ops_per_block = "forbid"
mutex_atomic = "forbid"
mutex_integer = "forbid"
needless_raw_strings = "forbid"
non_ascii_literal = "forbid"
non_zero_suggestions = "forbid"
panic_in_result_fn = "forbid"
partial_pub_fields = "forbid"
pathbuf_init_then_push = "forbid"
pattern_type_mismatch = "forbid"
precedence_bits = "forbid"
print_stderr = "forbid"
print_stdout = "forbid"
pub_use = "forbid"
pub_with_shorthand = "forbid"
pub_without_shorthand = "forbid"
rc_buffer = "forbid"
rc_mutex = "forbid"
redundant_type_annotations = "forbid"
ref_patterns = "forbid"
renamed_function_params = "forbid"
rest_pat_in_fully_bound_structs = "forbid"
return_and_then = "forbid"
same_name_method = "forbid"
self_named_module_files = "forbid"
semicolon_inside_block = "forbid"
semicolon_outside_block = "forbid"
separated_literal_suffix = "forbid"
shadow_reuse = "forbid"
shadow_same = "forbid"
shadow_unrelated = "forbid"
std_instead_of_alloc = "forbid"
std_instead_of_core = "forbid"
str_to_string = "forbid"
string_add = "forbid"
string_lit_chars_any = "forbid"
string_slice = "forbid"
string_to_string = "forbid"
suspicious_xor_used_as_pow = "forbid"
tests_outside_test_module = "forbid"
todo = "forbid"
try_err = "forbid"
undocumented_unsafe_blocks = "forbid"
unimplemented = "forbid"
unnecessary_safety_comment = "forbid"
unnecessary_safety_doc = "forbid"
unnecessary_self_imports = "forbid"
unneeded_field_pattern = "forbid"
unreachable = "forbid"
unseparated_literal_suffix = "forbid"
unused_result_ok = "forbid"
unused_trait_names = "forbid"
unwrap_in_result = "forbid"
use_debug = "forbid"
verbose_file_reads = "forbid"
wildcard_enum_match_arm = "forbid"

[dev-dependencies]
criterion = "0.6.0"
trybuild = "1.0.105"

[[bench]]
name = "static_vector"
harness = false
